<resources>
    <string name="app_name">SofriApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_as_guest">Sign As Guest</string>
    <string name="continue_with_mail">Continue with Mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="signin_as_guest">Signin as Guest</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login">Login</string>
    <string name="search_apartment">Search Apartment</string>
    <string name="messages">Messages</string>
</resources>